Remove ChangeChartTypeCommand and UpdateVisibleColumnsCommand; introduce ChartStateModel for managing chart state